end of start of website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,17 @@
 
     <aside>
         <div id="photo">
-            <img alt="Max Willsey" src="/assets/max.jpg">
+            <img alt="Sami Davies" src="/assets/headshot2.jpg">
             <h1> Sami Davies  </h1>
         </div>
         <section id="contact">
             <address>
-                <a href="https://github.com/mwillsey">CV</a>
+                <a href="/assets/CV.pdf">CV</a>
             </address>
              <address>
                 <a href="https://samidavies.wordpress.com">Blog</a>
             </address>
+            {% comment %}
             <input type="checkbox" id="academic-links" class="toggle-input">
             <label class="toggle-label" for="academic-links">Academic Links</label>
             <div class="toggle-content">
@@ -40,6 +41,7 @@
                     <a href="https://scholar.google.com/citations?user=zko9-RwAAAAJ&hl=en">Google Scholar</a>
                 </address>
             </div>
+            {% endcomment %}
         </section>
     </aside>
 
