added github account and news item about it

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
             <a class="nav-link" href="/">Home</a>
             <a class="nav-link" href="https://samidavies.wordpress.com">Blog</a>
             <a class="nav-link" href="/assets/CV.pdf">CV</a>
+            <a class="nav-link" href="https://github.com/samidavies">GitHub</a>
         </nav>
     </header>
     <hr>
