TR paper and shorten memos on research

--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -11,7 +11,7 @@
     <ul class="comma-list">
         {% for a_key in paper.authors %}
             {% assign a = site.data.people[a_key] %}
-            {%- if a_key == "mwillsey" -%}
+            {%- if a_key == "daviess" -%}
                 {% assign class = "author me" %}
             {%- else -%}
                 {% assign class = "author" %}
