--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Sami Davies</title>
+    <title>Sharmila Duppala</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-          content="Sami Davies, Postdoctoral Researcher">
-    <link rel="canonical" href="http://samidavies.com">
+          content="Sharmila Duppala, Ph.D. Student">
+    <link rel="canonical" href="http://sharmiladuppala.com">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" href="/main.css">
 </head>
@@ -19,9 +19,8 @@
         </h2>
         <nav class="nav justify-content-center">
             <a class="nav-link" href="/">Home</a>
-            <a class="nav-link" href="https://samidavies.wordpress.com">Blog</a>
             <a class="nav-link" href="/assets/CV.pdf">CV</a>
-            <a class="nav-link" href="https://github.com/samidavies">GitHub</a>
+            <a class="nav-link" href="https://github.com/trinity24">GitHub</a>
         </nav>
     </header>
     <hr>
