--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
     <header class="d-flex flex-column flex-md-row justify-content-md-between ">
         <h2 style="color:rgb(163, 108, 202);" class="text-center">
-            Sami Davies
+            Sharmila Duppala
         </h2>
         <nav class="nav justify-content-center">
             <a class="nav-link" href="/">Home</a>
